[package]
name = "escrow-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.1.3", features = ["staking"] } # remove staking feature
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
cosmwasm-schema = "2.1.3"
schemars = "0.8.21"
sylvia = "1.2.1"
constcat = "0.5.0"
thiserror = "1.0.64"

[dev-dependencies]
sylvia = { version = "1.1.0", features = ["mt"] }
cw-multi-test = "2.1.1"
serde_json = "1.0.128"
cosmrs = { version = "0.20", features = ["cosmwasm"] }
serial_test = "3.1"
# e2e-test-suite = { git = " http://gitlab.sce-ovoo.pl/c4e/chain/test/e2e-contract-test/e2e-test-suite.git", branch = "master" }
e2e-test-suite = { path = "../../e2e-test/e2e-test-suite" }